add project with all fixes